[package]
name = "do-rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
env_logger = "0.11"
diesel = { version = "2", features = ["postgres", "r2d2", "chrono", "uuid"] }
r2d2 = "0.8"
r2d2-diesel = "1"

[profile.release]
debug = false
